Increase PermSize, change order of commands in scripts